syntax = "proto3";

option go_package = "github.com/augtheo/slink";
package slink;

enum StatusCode {
  SUCCESS = 0;
  NOT_FOUND = 1;
}

message ShortenRequest { string original_url = 1; }

message ShortenResponse { string shortened_url = 1; }

message ExpandRequest { string shortened_url = 1; }

message ExpandResponse {
  StatusCode status = 1;
  string original_url = 2;
}

service UrlShortener {
  rpc Shorten(ShortenRequest) returns (ShortenResponse);
  rpc Expand(ExpandRequest) returns (ExpandResponse);
}
